<resources>
    <string name="app_name">Tetris no activity</string>
    <string name="tetris">TETRIS</string>
    <string name="high_score">High score</string>
    <string name="new_game">New game</string>
    <string name="reset_score">Reset score</string>
    <string name="exit">Exit</string>
    <string name="tv_current_score">Current score: </string>
    <string name="btn_restart">Restart game\n</string>
</resources>