<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:layout_marginBottom="@dimen/layout_margin_bottom"
        >

        <TextView
            android:id="@+id/titleTextTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tetris"
            android:textSize="80sp"
            />

        <TextView
            android:id="@+id/scoreTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_score"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/layout_margin_top"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/b_new_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_game" />

            <Button
                android:id="@+id/b_reset_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_score" />

            <Button
                android:id="@+id/b_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>